@@ -1,5 +1,6 @@
 Revision history for Perl extension AnyEvent.
 
+TODO: _AVOID_, _VERBOSE_
 	- improve perl 5.6 compatibility of the core event loop.
         - nail the signal race problem in perl once and for all
           (see $AnyEvent::MAX_SIGNAL_LATENCY).
@@ -7,6 +8,10 @@ Revision history for Perl extension AnyEvent.
         - load Time::HiRes and Guard modules on demand only.
         - add optional/recommended modules section to AnyEvent
           documentation.
+        - reduce memory usage considerably (and reduce startup penalty)
+          by not using "strict", "warnings" and "overload" modules.
+        - work around buggy windows perls and provide EBADMSG and EPROTO
+          ourselves.
 
 4.83 Fri Jul 17 16:56:26 CEST 2009
 	- implement AnyEvent::Socket::getprotobyname.
